# NLP-Legal-eval

./: .gitignore  .gitignore.orig  Dockerfile  README.md  baselines.py  constants.py  get_data.py  pyproject.toml  requirements.txt  results.md  setup.cfg  test_stuff.ipynb  tox.ini  utils.py
.github/workflows/: lint.yml  tox.yml
app/: app.py  requirements.txt
app/templates/: index.html
best_checkpoints_fasttext/attention/: config.json  optimizer.pt  rng_state.pth  trainer_state.json
best_checkpoints_fasttext/lstm/: config.json  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
legal_eval/: constants.py  data.py  utils.py
legal_eval/GPT/: openai.ipynb
legal_eval/baselines/: __init__.py  attention.py  lstm.py  ml.py  simple.py  utils.py
legal_eval/spacy/: data.py  dev.spacy  gpu_final.cfg  inference.ipynb
legal_eval/transformer/: test.py  train.py  utils.py
notebooks/: EDA.ipynb  baselines.ipynb  flair.ipynb  raw_transformer.ipynb  spacy.ipynb  transformer.ipynb
plots_similarity/: average_windowAttentionBaseline.html  average_windowLSTMBaseline.html  average_windowgaussian_1.html  average_windowgaussian_11.html  average_windowgaussian_3.html  average_windowgaussian_7.html  average_windowuniform_1.html  average_windowuniform_11.html  average_windowuniform_3.html  average_windowuniform_7.html
stubs/datasets/: definitions.pyi
stubs/evaluate/: definitions.pyi
stubs/fasttext/: definitions.py
stubs/scipy/: definitions.pyi
stubs/spacy/: definitions.pyi
tests/: conftest.py  test_data.py  test_simple.py  test_utils.py
(+10 files in other folders)
