[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legal_eval"
version = "0.0.1"
authors = [
  { name="Sebastian Chwilczynski", email="sebastian.chwilczynski@student.put.poznan.pl" },
]
description = "Project for NLP"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SebChw/NLP-Legal-eval"